# polyrythm-hardware-instrument

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h  lv_conf_hardware.h  lv_conf_sdl.h
docs/: CMakeLists.txt  Doxyfile
docs/diagrams/: architecturev2.puml
docs/doxygen/: mainPage.md  module_group.hpp
docs/doxygen/engine/module/: base.md
include/: App.hpp
include/common/: Consumer.hpp  LogType.hpp  Producer.hpp  SPSCQueue.hpp
include/common/command/: CreateConnection.hpp  CreateModule.hpp  DeleteModule.hpp  GetConnectionList.hpp  GetModuleList.hpp  ICommand.hpp  RemoveConnection.hpp  SetParameter.hpp
include/common/event/: AudioWaveEvent.hpp  EmitConnectionList.hpp  EmitModuleList.hpp  IEvent.hpp  MessageEvent.hpp  ModuleEvent.hpp
include/engine/: AudioEngine.hpp
include/engine/AudioGraph/: AudioGraph.hpp
include/engine/config/: InstrumentBuilder.hpp  InstrumentConfig.hpp  InstrumentParser.hpp
include/engine/core/: IEventEmitter.hpp  Type.hpp
include/engine/module/: ADSRModule.hpp  ArpegiatorModule.hpp  AudioOutModule.hpp  BaseModule.hpp  DebugModule.hpp  EnvelopeModule.hpp  EventEmitter.hpp  FilterModule.hpp  IModule.hpp  Instrument.hpp  InstrumentAudioOutModule.hpp  MixModule.hpp  ModuleFactory.hpp  ModuleGroup.hpp  OscModule.hpp  PolyRhythmModule.hpp  SamplerModule.hpp  StepSequencerModule.hpp
include/engine/parameter/: Param.hpp  ParamBase.hpp  Parameters.hpp
include/engine/port/: Connection.hpp  InputPort.hpp  OutputPort.hpp  Port.hpp
include/engine/signal/: AudioSignal.hpp  ControlSignal.hpp  EventSignal.hpp  ISignal.hpp
include/engine/utils/: WavLoader.hpp
include/gui/: IGUI.hpp  NullGUI.hpp
include/gui/LVGL/: LVGL.hpp  PolyRhythmCarousel.hpp  PolyRhythmUI.hpp  SequencerUI.hpp
include/ipc/: HardwareInputService.hpp  IIPC.hpp
presets/: 808_bass.json  tb_303.json
scripts/: ascii_wave_viewer.py  debug.py  spectrogram.py  wave_viewer.py
source/: App.cpp  main.cpp
source/engine/: AudioEngine.cpp
source/ipc/: HardwareInputService.cpp
tests/: CMakeLists.txt  test_audiograph.cpp  test_example.cpp
tests/engine/module/: FilterModule.tests.cpp  InstrumentModule.tests.cpp  OscModule.tests.cpp
(+74 files in other folders)
